// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders spatial filter before drawing 1`] = `
<EuiFlexGroup
  alignItems="flexStart"
  direction="column"
  gutterSize="s"
  responsive={false}
>
  <EuiFlexItem>
    <FilterByPolygon
      isDrawActive={false}
      setDrawFilterProperties={[MockFunction]}
    />
    <FilterByRectangle
      isDrawActive={false}
      setDrawFilterProperties={[MockFunction]}
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`renders spatial filter while drawing 1`] = `
<EuiFlexGroup
  alignItems="flexStart"
  direction="column"
  gutterSize="s"
  responsive={false}
>
  <EuiFlexItem>
    <FilterByPolygon
      isDrawActive={true}
      setDrawFilterProperties={[MockFunction]}
    />
    <FilterByRectangle
      isDrawActive={true}
      setDrawFilterProperties={[MockFunction]}
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;
